# OminiX-MLX

./: .gitignore  Cargo.toml  README.md  release.toml
.claude/skills/: .claude-plugin
.claude/skills/03-debugging/: SKILL.md  mlx-rs-patterns.md
.claude/skills/11-qwen-image-mlx/: SKILL.md
.github/workflows/: release-ominix-api.yml  release.yml
MiniCPM-SALA-MLX/: Cargo.toml  README.md
MiniCPM-SALA-MLX/examples/: batch_generate.rs  generate.rs  needle_test.rs  server.rs
MiniCPM-SALA-MLX/src/: speculative.rs
deepseek-ocr2-mlx/: Cargo.toml
deepseek-ocr2-mlx/src/: lib.rs  qwen2_encoder.rs  vision.rs
flux-klein-mlx/: Cargo.toml  README.md
flux-klein-mlx/src/: klein_quantized.rs  layers.rs  weights.rs
funasr-mlx/: Cargo.toml  README.md  code-review-funasr-mlx.md
funasr-mlx/examples/: transcribe.rs
funasr-mlx/src/: audio.rs  error.rs  lib.rs  paraformer.rs  punctuation.rs
funasr-nano-mlx/: Cargo.toml
funasr-nano-mlx/src/: audio.rs
funasr-qwen4b-mlx/: Cargo.toml
glm-4.7-flash-mlx/: Cargo.toml
glm4-mlx/: Cargo.toml
glm4-moe-mlx/: Cargo.toml
gpt-sovits-mlx/: Cargo.toml  README.md
gpt-sovits-mlx/examples/: compare_hubert_rust.rs  compare_t2s_intermediates.rs  debug_bert_alignment.rs  debug_semantic_tokens_hebing.rs  preprocess_audio.rs  trace_t2s_full.rs  trace_t2s_rust.rs  tts_debug.rs  voice_clone.rs
gpt-sovits-mlx/python/: engine.py  generate.py
gpt-sovits-mlx/python/models/: attention.py
gpt-sovits-mlx/src/: error.rs  inference.rs  lib.rs  voice_clone.rs
gpt-sovits-mlx/src/models/: hubert.rs  mod.rs  t2s.rs  vits.rs  vits_onnx.rs
gpt-sovits-mlx/src/preprocessing/: asr.rs
gpt-sovits-mlx/src/text/: g2p_en.rs  mod.rs  preprocessor.rs
gpt-sovits-mlx/src/training/: mod.rs  vits_trainer.rs
gpt-sovits-mlx/tests/: integration.rs
minicpm-sala-mlx/: Cargo.toml
minicpm-sala-mlx/docs/: BLOG.md  feature-gap.md
minicpm-sala-mlx/examples/: chat.rs  save_quantized.rs  server.rs  speculative_generate.rs  test_rope_batch.rs
minicpm-sala-mlx/src/: config.rs  metal_kernels.rs  model.rs
minicpm-sala-mlx/src/attention/: lightning.rs  mod.rs  sparse.rs
mistral-mlx/: Cargo.toml
mixtral-mlx/: Cargo.toml
mlx-rs-core/: Cargo.toml
mlx-rs-core/src/: audio.rs  cache.rs
mlx-rs/mlx-lm-utils/: Cargo.toml
moxin-vlm-mlx/: Cargo.toml
ominix-api/: Cargo.toml  README.md
ominix-api/src/: main.rs
qwen-image-mlx/: Cargo.toml
qwen3-asr-1.7b-mlx/: README.md
qwen3-asr-1.7b-mlx/src/: audio.rs
qwen3-asr-mlx/: Cargo.toml  README.md
qwen3-asr-mlx/examples/: transcribe.rs
qwen3-asr-mlx/src/: encoder.rs  error.rs  lib.rs  model.rs
qwen3-mlx/: Cargo.toml
qwen3-mlx/src/: qwen2.rs
qwen3-tts-mlx/: Cargo.toml  README.md
qwen3-tts-mlx/src/: config.rs  generate.rs  lib.rs  speaker_encoder.rs  talker.rs
qwen3.5-35B-mlx/: Cargo.toml  README.md
qwen3.5-35B-mlx/src/: lib.rs
step-audio2-mlx/: Cargo.toml
step-audio2-mlx/docs/: PERFORMANCE_OPTIMIZATION.md
step-audio2-mlx/examples/: benchmark_e2e.rs
zimage-mlx/: Cargo.toml
zimage-mlx/examples/: generate_zimage.rs
