[package]
name = "deepseek-ocr2-mlx"
version = "0.1.0"
edition = "2021"
description = "DeepSeek-OCR-2 vision-language model inference on Apple Silicon with MLX"
license = "Apache-2.0"

[dependencies]
mlx-rs = { path = "../mlx-rs", features = ["metal", "accelerate"] }
mlx-sys = { path = "../mlx-rs/mlx-sys" }
mlx-rs-core = { path = "../mlx-rs-core" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
hf-hub = "0.4"
anyhow = "1"
image = "0.25"

[[example]]
name = "infer"
path = "examples/infer.rs"
