[package]
name = "mlx-rs-core"
version = "0.1.0"
edition = "2021"
description = "Shared inference infrastructure for MLX Rust crates"
license = "MIT OR Apache-2.0"

[features]
default = []
convert = ["candle-core", "safetensors"]

[dependencies]
mlx-rs = { path = "../mlx-rs", features = ["metal", "accelerate"] }
mlx-sys = { path = "../mlx-rs/mlx-sys" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"

# Audio processing dependencies
rubato = "1.0"  # High-quality audio resampling

# Model conversion dependencies (optional)
candle-core = { version = "0.8", optional = true }
safetensors = { version = "0.5", optional = true }
