[package]
name = "qwen-image-mlx"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Qwen-Image-2512 implementation in Rust using MLX"

[dependencies]
mlx-rs = { path = "../mlx-rs", features = ["safetensors"] }
mlx-macros = { path = "../mlx-rs/mlx-macros" }
mlx-rs-core = { path = "../mlx-rs-core" }
thiserror.workspace = true
safetensors.workspace = true
bytemuck.workspace = true
memmap2.workspace = true
serde_json = "1"
tokenizers = "0.21"
mlx-sys = { path = "../mlx-rs/mlx-sys" }

[dev-dependencies]
pretty_assertions.workspace = true
clap = { version = "4", features = ["derive"] }
dirs = "6"
half = "2"
image = "0.25"

[[example]]
name = "generate_qwen_image"
path = "examples/generate_qwen_image.rs"

[[example]]
name = "generate_full_precision"
path = "examples/generate_full_precision.rs"

[[example]]
name = "generate_fp32"
path = "examples/generate_fp32.rs"

[[example]]
name = "mfa_test"
path = "examples/mfa_test/main.rs"
